Sec16_Chap167-XX: cleaned up and optimized code